# trading-backtest

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md  pyproject.toml  run_tests.py
.github/workflows/: tests.yml
docs/: BACKTEST_IMPLEMENTATION.md  RELEASE_CHECKLIST.md
docs/releases/: v0.1.0.md
examples/: README.md  _bootstrap.py  compare_fill_audits.py  minimal_backtest_smoke.py  tick_cache_template.py
src/trading_backtest/: __init__.py  _version.py  engine.py  loader.py  mock_broker.py  validation.py
tests/: test_backtester.py  test_loader.py  test_mock_broker.py  test_validation.py
