[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-backtest"
version = "0.1.0"
description = "Deterministic tick replay driver for trading-engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "trading-engine>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]